--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "espruino": "0.1.6",
-    "rimraf": "^2.6.2",
+    "espruino": "github:ilyapavkin/EspruinoTools#bugfix/winnus-fix",
+    "rimraf": "^3.0.2",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-cleanup": "^2.0.0",
@@ -33,7 +33,7 @@
     "chai": "^4.1.2",
     "esprima": "^4.0.0",
     "istanbul": "^0.4.5",
-    "mocha": "^5.0.5",
+    "mocha": "^8.1.3",
     "mock-spawn": "^0.2.6",
     "proxyquire": "^2.0.1",
     "sinon": "^4.5.0",
