--- a/package.json
+++ b/package.json
@@ -17,28 +17,27 @@
     "espruino"
   ],
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "espruino": "0.1.6",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.57.1",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-cleanup": "^2.0.0",
-    "rollup-plugin-json": "^2.3.0",
-    "rollup-plugin-node-resolve": "^3.3.0"
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-external-helpers": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-babel": "^5.2.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "espruino": "^0.1.32",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.26.10",
+    "rollup-plugin-cleanup": "^3.1.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "esprima": "^4.0.0",
     "istanbul": "^0.4.5",
-    "mocha": "^5.0.5",
+    "mocha": "^8.1.3",
     "mock-spawn": "^0.2.6",
     "proxyquire": "^2.0.1",
-    "sinon": "^4.5.0",
+    "sinon": "^9.0.3",
     "test-console": "^1.1.0",
-    "tmp": "0.0.33"
+    "tmp": "^0.2.1"
   },
   "author": "Andrew Chalkley <andrew@chalkley.org>",
   "license": "MIT",
